# v-tools

./: README.md  pyproject.toml
src/: cli.py  vtools.py
src/vtools/: __init__.py  controller.py  cpu.py  datastore.py  device.py  disk.py  esxi.py  exception.py  query.py  snapshot.py  vm.py  vsphere.py
src/vtools/cli/: config.py  controller.py  cpu.py  datastore.py  disk.py  exception.py  main.py  memory.py  snapshot.py  vm.py
