[project]
name = "v-tools"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "Wei Gao", email = "gaowei@vmware.com" }
]
dependencies = [
    "pyvmomi>=8.0.1.0.1",
    "requests>=2.31.0",
    "rich>=13.4.2",
    "tenacity>=8.2.2",
    "loguru>=0.7.0",
    "typer>=0.9.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
vtools-cli = 'vtools.cli.main:main'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true
